# repo759

./: .gitignore
FinalProject/LiquidCudaSim/: .gitignore  CMakeLists.txt  README.md  main.cu
FinalProject/LiquidCudaSim/scene/: water_fall.cu
FinalProject/LiquidCudaSim/src/: CMakeLists.txt
FinalProject/LiquidCudaSim/src/engine/: Engine.h  SimApp.h
FinalProject/LiquidCudaSim/src/render/: Renderer.cpp
FinalProject/LiquidCudaSim/src/scene/: jelly_armadilo.cu  jelly_bunny.cu  jelly_constraint.cu
HW01/: task4.sh  task6.cpp  task6.sh
HW01/somedir/: sometext.txt
HW02/: convolution.cpp  convolution.h  matmul.cpp  matmul.h  plot.py  scan.cpp  scan.h  task1  task1.cpp  task1.sh  task2.cpp  task2.sh  task3.cpp  task3.sh  test_conv  test_conv.cpp
HW03/: plot.py  task1.cu  task1.sh  task2.cu  task2.sh  task3.cu  task3.sh  task3_c.sh  vscale.cu  vscale.cuh
HW04/: matmul.cu  matmul.cuh  plot_task1.py  plot_task2.py  stencil.cu  stencil.cuh  task1.cu  task1.sh  task2.cu  task2.sh
HW05/: matmul.cu  pick_best_blockdim.py  plot2.py  plot_task1_b.py  reduce.cu  reduce.cuh  task1.cu  task1_b_scale.sh  task1_blockdim_sweep.sh  task1_c_bestbd.sh  task1_check_output.sh  task2.cu  task2.sh  task2_warmup.sh
HW06/: memcheck.sh  mmul.cu  plot1.py  plot2.py  scan.cu  task1.cu  task1.sh  task2.cu  task2.sh
HW07/: count.cu  task1_cub.cu  task1_plot.py  task1_sbatch.sh  task1_thrust.cu  task2.cu  task2.sh  task2_plot.py  task3.cpp  task3.sh
HW08/: convolution.cpp  matmul.cpp  msort.cpp  plot_task1.py  plot_task2.py  plot_task3.py  task1.cpp  task1.sh  task2.cpp  task2.sh  task3.cpp  task3.sh
scene/: water_fall_bunny.cu
src/engine/: Engine.cpp
src/engine/cuda/: CudaTypes.cuh
src/scene/: CMakeLists.txt  jelly_cube.cu  jelly_sphere.cu
